Added background images for Front Page sections and skip-link to header

--- a/src/pages/jatehuolto.html
+++ b/src/pages/jatehuolto.html
@@ -7,7 +7,7 @@ title: Jätehuolto |
 <div class="page-hero hero-jatehuolto">
 
 	<div class="row">
-	<div clas="columns small-12">
+	<div class="columns small-12">
 
 		<p class="slogan">Inhoamme kuljettamista, joten meille kelpaavat vain täydet säiliöt.</p>
 
