--- a/src/pages/tietoturva.html
+++ b/src/pages/tietoturva.html
@@ -7,7 +7,7 @@ title: Tietoturva |
 <div class="page-hero hero-jatehuolto">
 
 	<div class="row">
-	<div clas="columns small-12">
+	<div class="columns small-12">
 
 		<p class="slogan">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Curabitur blandit tempus porttitor.</p>
 
