Added content to pages

--- a/src/pages/jatehuolto.html
+++ b/src/pages/jatehuolto.html
@@ -32,7 +32,7 @@ title: Jätehuolto |
 <div class="row">
 
 <div class="columns small-12">
-	<h1>Encore jätehuoltopalvelu</h1>
+	<h1>Älyllä johdettu jätehuolto on jo tätä päivää</h1>
 </div>
 
 	<div class="row">
@@ -42,12 +42,38 @@ title: Jätehuolto |
 	</div><!--/content-image-->
 
 	<div class="columns small-12 medium-6 content-text">
-		<p>Donec id elit non mi porta gravida at eget metus. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
 
-		<p>Curabitur blandit tempus porttitor. Donec id elit non mi porta gravida at eget metus. Donec ullamcorper nulla non metus auctor fringilla. Maecenas sed diam eget risus varius blandit sit amet non magna. Nullam id dolor id nibh ultricies vehicula ut id elit. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.</p>
+
+<p>Tuomme alalle kustannustehokkaita ratkaisuja ja olemme paikallisesti läsnä.</p>
+
+<p>Encore Jätehuoltopalvelu on yritysten jätteiden kokonaisvaltaisen kierrättämisen älykäs osaaja, jolle yritykset voivat ulkoistaa koko jätehuoltonsa.</p>
+
+<p>Vastaamme digitalisaation ja paperijätteen vähenemisen myötä syntyneisiin kierrätyshaasteisiin. Encoren palvelu ei ole pelkkää kuitujenkierrättämistä, vaan tarjoamme ratkaisun asiakaslähtöisesti ja räätälöidysti kaikkiin jätehuoltotarpeisiin.</p>
+
+<p>Olemme läsnä paikallisesti. Meillä ei ole omaa kuljetuskalustoa, vaan toimintamallimme perustuu yhteistyöhön kuljetuskumppaneiden ja urakoitsijoiden kanssa. Tuemme paikallista työvoimaa järjestämällä logistiikan kumppaniyritysten kanssa jokaisessa 20 tuotantoyksikössämme eri puolella maata.</p>
+
+<p>Kumppanuusmalli on olennainen osa toimintaamme. Kenttäpäälliköt operoivat konkreettisesti paikallisten urakoitsijoiden kanssa ja meillä on myös tarkoin valittuja valtakunnallisia kumppaneita. RS Ympäristöhuolto on oman vastuualueeni eli painotalojen alumiinilevyjen ja vaarallisten jätteiden käsittelyn ja kuljetuksen erityisosaaja, etelästä pohjoiseen.</p>
+
+<h2>Kasvollista palvelua asiakkaan yksilöllisiin tarpeisiin</h2>
+
+<p>Palvelemme omilla kasvoillamme. Asiakasvastaavat ovat asiakkaiden kanssa kanssa tiiviisti tekemisissä – yhden luukun periaate viestinnässä ja koordinoinnissa toteutuu asiakasvastaavan kautta.</p>
+
+<p>Suunnittelemme aina asiakkaan kanssa jätehuollon tarpeet yksilöllisesti. Järjestämme operatiivisia seurantapalavereita sekä ohjausryhmiä vuosittain. Niissä pureudutaan jätehuollon toimivuuteen, mahdollisiin kehityskohtiin ja päätetään isommista linjanvedoista yhdessä asiakkaan kanssa. </p>
+
+<p>Encore toimii ulkoisena auditoijana jätehuollon toimivuutta, turvallisuutta ja käytännönläheisyyyttä tarkasteltaessa. Käytössä on laatukierroskonsepti: teemme asiakkalle vuosittain laatukierrosarvion paikan päällä. Raportoimme mahdolliset poikkeamat asiakkaalle ja teemme tarvittavat toimenpiteet.</p>
+
+<h2>Älyä ja innovaatioita ympäristön hyväksi</h2>
+
+<p>Digitalisaatio on mahdollistanut jätehuollon älykkään, tietoon perustuvan johtamisen. Puristimemme on varustettu etähälyjärjestelmillä, toisin sanoen järjestelmä mittaa kontin täyttöastetta. Täyttörajan ylittyessä lähtee kuljetusliikkeelle tieto vaihtamistarpeesta. Tällä tavoin varmistamme sen, että puristinkonttien, lavojen ja pienastioiden täyttöasteet pysyvät mahdollisimman korkeina.</p> 
+
+<p>Kuljetusurakoitsijoiden käytössä oleva mobiilisovellus antaa kuljettajille tiedot tyhjennystarpeista eri kohteissa. Sitä kautta he pystyvät suunnittelemaan omia ajoreittejään kustannustehokkaasti.</p> 
+
+<p>Edelläkävijyys edellyttää innovatiivisen jätehuollon toteuttamista ja kehittämistä edellleen, ympäristön hyväksi ja asiakkaan palvelemiseksi kustannustehokkaasti ja kokonaisvaltaisesti.</p>
+
+<p>Encore haluaa olla edelläkävijä myös jatkossa.</p>
 
 		<div class="newsletter-link">Tilaa uutiskirje &raquo;</div><!--/newsletter-button-->
-	</div><!--/content-image-->
+	</div><!--/content-text-->
 
 	</div><!--/row-->
 
