--- a/src/pages/kuormalava.html
+++ b/src/pages/kuormalava.html
@@ -9,7 +9,7 @@ title: Kuormalava |
 	<div class="row">
 	<div class="columns small-12">
 
-		<p class="slogan">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Curabitur blandit tempus porttitor.</p>
+		<p class="slogan">Me tiedämme, missä lavasi liikkuvat ja paljonko niissä on rahaa kiinni.</p>
 
 		<div class="row">
 		<div class="columns small-12 medium-6 link-box">
@@ -32,7 +32,7 @@ title: Kuormalava |
 <div class="row">
 
 <div class="columns small-12">
-	<h1>Kuormalava</h1>
+	<h1>Tulevaisuus on vihreä</h1>
 </div>
 
 	<div class="row">
@@ -42,13 +42,36 @@ title: Kuormalava |
 	</div><!--/content-image-->
 
 	<div class="columns small-12 medium-6 content-text">
-		<p>Donec id elit non mi porta gravida at eget metus. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
 
-		<p>Curabitur blandit tempus porttitor. Donec id elit non mi porta gravida at eget metus. Donec ullamcorper nulla non metus auctor fringilla. Maecenas sed diam eget risus varius blandit sit amet non magna. Nullam id dolor id nibh ultricies vehicula ut id elit. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.</p>
+<p>Encore uudistaa älykkäästi koko lavatoimialaa ja takaa asiakkailleen saatavilla olevat, puhtaat ja hyväkuntoiset lavat</p>
+
+<p>Encore-vuokralavat on oma vihreä tuoteperheemme. Lavan tarve huomataan yleensä siinä vaiheessa, kun lava puuttuu. Vuokralavoihin perustuvassa toimintamallissamme lavoja on aina saatavilla, ja tarpeen mukaan valmistamme  niitä lisää. Kun lavat eivät jää seisomaan varastoihin, säästää asiakas myös tilaa.</p>
+
+<p>Siinä missä lava liikutti aiemmin tavaraa, liikuttaa se nykyään sekä tavaraa että tietoa. Käytössämme on lava 2.0: standardimalliseen lavaan on lisätty älyä ja palvelua. RFID-tunnisteiden avulla tiedot lavojen liikkeistä ja määristä ovat koko ajan saatavilla.</p>
+
+<h2>Seurattavuutta ja kunnossapitoa</h2>
+
+<p>Tunnisteita on käytetty ennenkin, mutta yleensä vain yritysten sisäisen seurannan tarkoituksiin. Encore on sen sijaan rakentanut avoimen järjestelmän joka on myös asiakkaiden käytettävissä. Kun meiltä vuokraa lavan, vuokraa samaan hintaan myös järjestelmän. Esimerkiksi kauppojen keskusliikkeet pystyvät seuraamaan vuokralavojensa liikettä helposti ja reaaliajassa.</p>
+
+<p>Vanhan kuormalavamallin ongelma on, että kantaa ei omista kukaan. Tällöin myöskään lavojen kunnosta ei vastaa kukaan. Kun kannalla on omistaja, kuten Encoren vuokralavoilla, on sillä myös kunnossapitäjä. Lavan saapuessa toimipisteeseemme tarkastamme lavan, puhdistamme sen ja kunnostamme tarpeen mukaan. Meiltä vuokratessaan asiakas voi olla varma, että lavat ovat aina käyttövalmiita ja jokaiseen automaattilinjaan sopivassa kunnossa.</p>
+
+<h2>Encore on yhteistyön asialla</h2>
+
+<p>Toimitusketjun jäsenten välinen yhteistyö on lavatoiminnan ydintä. On ymmärrettävä, että lava on tuote joka kulkee läpi koko toimitusketjun aina paluulogistiikkaan asti. Jos toimitusketjua halutaan kehittää, on yhteistyön perustuttava avoimuuteen ja läpinäkyvyyteen kaikkien ketjun osapuolten kesken. Seurantatietojen täytyy olla mahdollisimman monelle käytettävissä ja jokaisen on saatava juuri se tieto jota tarvitsee.</p> 
+
+<p>Encore haluaa olla alan joustavin ja kustannustehokkain toimija. Emme koskaan sovita asiakasta sapluunaan, vaan sapluunan asiakkaaseen.</p>
+
+<p>Kumppaniyrityksemme ovat myös lavatoiminnassa tärkeässä osassa. Seurantajärjestelmäämme on ollut kanssamme kehittämässä GS1.</p>
+
+<h2>Tulevaisuuden toimitusketju on ekologinen</h2>
+
+<p>Seurattavuus, ekologisuus ja joustavuus ovat lavatoiminnan tulevaisuutta. Meidän tehtävämme on varmistaa, että asiakkaalla on lava, josta se saa omaa toimintaansa tukevaa tietoa edullisesti ja vaivattomasti. Vuokralavamallissa lavat säilyvät paremmassa kunnossa ja jätteen määrä vähenee. Tälle pohjalle rakennamme tulevaisuuden toimitusketjua.</p>
+
+<p>Vain aika näyttää, mihin lavasta lopulta on.  Nojaamme vihreään tulevaisuuteen.</p>
 
 		{{> uutiskirje-link}}
 
-	</div><!--/content-image-->
+	</div><!--/content-text-->
 
 	</div><!--/row-->
 
