--- a/src/pages/paakirjoitus.html
+++ b/src/pages/paakirjoitus.html
@@ -8,23 +8,23 @@ title: Pääkirjoitus |
 
 <article class="page-content">
 
-<h1>Pääkirjoituksen otsikko</h1>
+<h1>Pääkirjoitus</h1>
 
-<p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Curabitur blandit tempus porttitor. Vestibulum id ligula porta felis euismod semper. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+<p>Tiedolla johtamisesta on puhuttu jo vuosikymmeniä – ainakin johtamisen oppikirjoissa. Käytännön tasolla on kuitenkin monesti hämärää, mitä se oikea tieto on sisällöltään ja miten sitä johtamisessa pitäisi hyödyntää. Onneksi aika on hoitanut ratkaisuja lähemmäksi arkista tekemistä tietotekniikan kehittyessä. Olennaisen tiedon keräämisessä ei enää ole suurtakaan ongelmaa. Kaikki mahdollinen data on digitaalisessa muodossa ja sitä saa lähes reaaliajassa.</p>
 
-<p>Curabitur blandit tempus porttitor. Nulla vitae elit libero, a pharetra augue. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Maecenas sed diam eget risus varius blandit sit amet non magna. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Aenean lacinia bibendum nulla sed consectetur.
-</p>
-<p>Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Nulla vitae elit libero, a pharetra augue. Etiam porta sem malesuada magna mollis euismod. Aenean lacinia bibendum nulla sed consectetur.
-</p>
-<p>Vestibulum id ligula porta felis euismod semper. Curabitur blandit tempus porttitor. Nulla vitae elit libero, a pharetra augue. Sed posuere consectetur est at lobortis. Curabitur blandit tempus porttitor. Curabitur blandit tempus porttitor. Nulla vitae elit libero, a pharetra augue.
-</p>
-<p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Curabitur blandit tempus porttitor. Vestibulum id ligula porta felis euismod semper. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-</p>
-<p>Curabitur blandit tempus porttitor. Nulla vitae elit libero, a pharetra augue. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Maecenas sed diam eget risus varius blandit sit amet non magna. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Aenean lacinia bibendum nulla sed consectetur.</p>
+<p>Olemme Encore Palveluja kehittäessämme ottaneet käyttöön jo vuosikymmen sitten RFID-anturit tietoturva- ja jätepalveluissamme sekä viimeksi myös kuormalavoissamme. Kattavan, koko toimitusketjun matkalta kerättävän tiedon avulla pystymme raportoimaan asiakkaillemme toteutetut palvelutapahtumat. Luotettavuus on olennaista luottamuksellisten materiaalien käsittelyssä, olipa sitten kysymys papereista tai elektronisista tallenteista ja laitteista.</p>
 
-<p>Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Nulla vitae elit libero, a pharetra augue. Etiam porta sem malesuada magna mollis euismod. Aenean lacinia bibendum nulla sed consectetur.
-</p>
-<p>Vestibulum id ligula porta felis euismod semper. Curabitur blandit tempus porttitor. Nulla vitae elit libero, a pharetra augue. Sed posuere consectetur est at lobortis. Curabitur blandit tempus porttitor. Curabitur blandit tempus porttitor. Nulla vitae elit libero, a pharetra augue.</p>
+<p>Tavaroiden ja palvelujen logistiikassa pienestäkin ylimääräisestä käsittelystä tai katkoksesta voi aiheutua merkittäviä vuotuisia kustannuksia. Kattava, oikeaan tietoon perustuva data auttaa nostamaan selkeästi tuottavuutta esimerkiksi kustannusten tai kiertonopeuksien tarkastelulla.</p>
+
+<p>Digitalisaatio on vähentänyt merkittävästi graafisten painopapereiden kulutusta kuluneen vuosikymmenen aikana. Tämä kehitys on luonnollisesti näkynyt keräyspaperimäärissä. Nyt alenema näyttäisi kuitenkin loiventuneen. Toivottavasti talouden kasvusuunta jatkuu ja keräysverkostollemme on edelleen tarvetta.</p>
+
+<p>Jotta voimme vastata vähentyneen keräysmäärän aiheuttamiin kustannuspaineisiin, olemme aloittamassa uudenlaista keräysmallikokeilua. Tässä kohteenamme ovat haja-asutusalueet, jossa teemme yhteistyötä postin päivittäisjakelun kanssa. Tavoitteenamme on yhdistää postiautojen paluulogistiikkaan keräyspaperin talteenotto. Kaksi kärpästä yhdellä iskulla, ja sen lisäksi pienempi hiilijalanjälki.</p>
+
+<p>Hyvää ja lämmintä kesäkautta</p>
+
+<p>toimitusjohtaja<br>
+Kyösti Pöyry</p>
+
 
 </article>
 
