--- a/src/pages/tietoturva.html
+++ b/src/pages/tietoturva.html
@@ -9,7 +9,7 @@ title: Tietoturva |
 	<div class="row">
 	<div class="columns small-12">
 
-		<p class="slogan">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Curabitur blandit tempus porttitor.</p>
+		<p class="slogan">Sinun arkaluontoinen aineistosi ei kuulu muille, siksi me tuhoamme sen.</p>
 
 		<div class="row">
 		<div class="columns small-12 medium-6 link-box">
@@ -32,7 +32,7 @@ title: Tietoturva |
 <div class="row">
 
 <div class="columns small-12">
-	<h1>Tietoturva</h1>
+	<h1>Turvallinen tuhoaja</h1>
 </div>
 
 	<div class="row">
@@ -42,12 +42,39 @@ title: Tietoturva |
 	</div><!--/content-image-->
 
 	<div class="columns small-12 medium-6 content-text">
-		<p>Donec id elit non mi porta gravida at eget metus. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
 
-		<p>Curabitur blandit tempus porttitor. Donec id elit non mi porta gravida at eget metus. Donec ullamcorper nulla non metus auctor fringilla. Maecenas sed diam eget risus varius blandit sit amet non magna. Nullam id dolor id nibh ultricies vehicula ut id elit. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.</p>
+<p>Tietoturvaosaaminen on tiedolla johtamista. Siinä ei ole varaa olettaa mitään.</p>
+
+<p>Encore Tietoturvapalvelu on yritysten luottamuksellisten aineistojen turvallinen tuhoaja. Arkaluontoisten asiakastietojen oikeanlainen säilyttäminen ja tuhoaminen on entistä tärkeämpää. Meidän on pystyttävä vastaamaan myös EU:n uuden tietosuoja-asetuksen tuomiin vaatimuksiin.</p>
+
+<p>Asiakkaalle olemme avoin, kasvollinen kumppani.  Kerromme asiakkaalle, kuinka prosessimme toimivat ja miten juuri heidän materiaalinsa käsitellään. Kuuntelemme asiakkaan toiveita ja räätälöimme palvelun heille sopivaksi.</p>
+
+<p>On meidän tehtävämme pitää asiakas aina kärryillä prosessin kulusta. Haluamme myös saada kuuluviin asiakkaan äänen.</p>
+
+<p>Kiinnitämme erityistä huomiota siihen että tietoturvakuljetukset toimivat varmasti ja aukottomasti. Encorella on tietoturva-asioissa nollatoleranssi. Säiliöiden RFID-tägien avulla säiliöiden noutoaikaa ja tuhottavaksi saapumista seurataan tarkasti ja vasteaika tuhoamiselle pystytään todentamaan.</p>
+
+<p>Seurattavuus koskee myös autoja: GPS-paikantamisella varmistetaan, että ajojärjestelijällä on reaaliaikainen ja tarkka tieto siitä missä autot liikkuvat. Tietoturvasäiliöt pysyvät lukittuina koko kuljetuksen ajan umpikorisissa autoissa. Kumppanikuljettajat perehdytetään koko Encoren prosessiin sekä koulutetaan turvakuljettamiseen.</p>
+
+<h2>Kumppanit tuovat kustannustehokkuutta</h2>
+
+<p>Kumppanuusyrityksillä on merkittävä osa Encoren palvelumallissa. Tarkoin valittujen kuljetuskumppaneiden avulla pystymme palvelemaan asiakasta lähellä ja nopeasti. Meillä on valtakunnallinen palvelu, jonka olemme suunnitelleet ja toteuttaneet alueellisesti toimivaksi. Esimerkiksi tietoturvakuljetukset pääkaupunkiseudulla on meille toimittanut vuodesta 2014 alkaen Hakonen Solutions Oy.</p>
+
+<p>Encore on logistiikan osaaja, joka optimoi ja johtaa tiedolla. Seuraamme säiliöiden täyttymistä ja vältämme turhia ajokilometrejä. Ei ole asiakkaan, ympäristön eikä meidän etumme mukaista ajeluttaa puolityhjiä autoja.</p>
+
+<p>Tuhoamisyksikkömme ovat valvottuja ja suljettuja tiloja, joihin ei ulkopuolisella ole asiaa. Vastuullisena tuhoajana varmistamme että kaikki materiaali tuhotaan asianmukaisesti.</p>
+
+<h2>Encore on tietoturvan ja kierrättämisen uudistaja</h2>
+
+<p>Tietoturvapalveluiden tarve muuttuu ja kehittyy. Haluamme olla innovatiivinen palveluntarjoaja myös tulevaisuudessa. Pelkällä paperinsilppuamisella ei enää pärjää. Esimerkiksi sähkö- ja elektroniikkaromun kuten kovalevyjen ja USB-tikkujen asianmukainen ja luotettava hävittäminen murskaamalla on tärkeä osa toimintaamme. Encore Tietoturvapalveluun sisältyy lupaus kokonaisvaltaisesta tietoturva-aineistojen turvallisesta tuhoamisesta.</p>
+
+<p>Olemme kiinnostuneet kehittämään kierrätysratkaisuja, joita alalla ei ole vielä nähty – haluamme olla kierrätyksen aallonharjalla. Jos tuhoamiskeinoa ei vielä ole olemassa, keksimme sen. Kierrätys on aina toimintamme ytimessä. Tietoturvajätteestä syntyvä paperisilppu päätyy pehmopaperituotannon raaka-aineeksi.</p>
+
+<p>Uusien ratkaisujen löytäminen on myös henkilökohtainen tavoitteeni. Joskus ratkaisut tulevat läheltä. Kollegani kehitti prosessin rekisterikilville. Nyt niitä otetaan vastaan, tuhotaan ja kierrätetään materiaalina yhteistyössä kumppanin kanssa.</p>
+
+<p>Osaamisella ja uudistumiskyvyllä ansaitsemme asiakkaiden luottamuksen.</p>
 
 		<div class="newsletter-link">Tilaa uutiskirje &raquo;</div><!--/newsletter-button-->
-	</div><!--/content-image-->
+	</div><!--/content-text-->
 
 	</div><!--/row-->
 
