Modified page content + styles

--- a/src/pages/tuottajavastuu.html
+++ b/src/pages/tuottajavastuu.html
@@ -64,7 +64,7 @@ title: Tuottajavastuu |
 <div class="row">
 
 	<div class="columns small-12">
-	<h2>Avainlukuja toimialasta</h2>
+	<h3 class="avainluvut-heading">Avainlukuja toimialasta</h3>
 	</div>
 
 	<div class="page-avainluvut">
