--- a/src/pages/jatehuolto.html
+++ b/src/pages/jatehuolto.html
@@ -83,7 +83,7 @@ title: Jätehuolto |
 <div class="row">
 
 	<div class="columns small-12">
-	<h2>Avainlukuja toimialasta</h2>
+	<h3 class="avainluvut-heading">Avainlukuja toimialasta</h3>
 	</div>
 
 	<div class="page-avainluvut">
