--- a/src/pages/kuormalava.html
+++ b/src/pages/kuormalava.html
@@ -81,7 +81,7 @@ title: Kuormalava |
 <div class="row">
 
 	<div class="columns small-12">
-	<h2>Avainlukuja toimialasta</h2>
+	<h3 class="avainluvut-heading">Avainlukuja toimialasta</h3>
 	</div>
 
 	<div class="page-avainluvut">
