Added Tuottajavastuu link to Front Page

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -75,7 +75,7 @@
 		<h2>Tuottajavastuu</h2>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent dolor odio, finibus non finibus vitae, finibus ac velit. Donec nec mi id ligula pretium dapibus. Pellentesque tellus erat, placerat sodales blandit eget, dapibus vitae nisl. Vestibulum diam elit, fringilla non pulvinar a, cursus vel nisl. Phasellus finibus porttitor ante quis commodo. Phasellus malesuada mauris non ex iaculis ultricies. Sed in vulputate orci. Vestibulum in urna malesuada, elementum turpis vel, feugiat libero. Fusce blandit nisl quis ex ornare ultrices. Sed ut placerat nisl. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi ac magna vitae quam dictum malesuada. Nunc tempus tortor a mi pulvinar posuere. Sed pellentesque iaculis turpis sit amet venenatis.</p>
 	
-		<a href="#" class="lue-lisaa">Lue lisää <span>&raquo;</span></a>
+		<a href="{{root}}tuottajavastuu.html" class="lue-lisaa">Lue lisää <span>&raquo;</span></a>
 	</div>
 	</div><!--/tuottajavastuu-section-->
 	
