Added icons & images to page hero

--- a/src/pages/jatehuolto.html
+++ b/src/pages/jatehuolto.html
@@ -13,15 +13,26 @@ title: Jätehuolto |
 
 		<div class="row">
 		<div class="columns small-12 medium-6 link-box">
-		<div class="link-box-content infografiikka">Katso infografiikka</div></div>
+		<div class="link-box-content infografiikka">
+			<span>Katso infografiikka</span>
+			<span class="image-icon"></span>
+			<img src="assets/img/info-thumb.jpg" class="info-thumb" alt="Avaa infografiikka">
+		</div>
+		</div>
 
 		<a class="youtube cboxElement" href="http://www.youtube.com/embed/VOJyrQa_WR4?rel=0&amp;wmode=transparent">
 			<div class="columns small-12 medium-6 link-box">
-				<div class="link-box-content video">Katso video</div>
+				<div class="link-box-content video">
+					<span>Katso video</span>
+					<span class="play-icon"></span>
+					<img src="assets/img/truck.png" class="truck" alt="Avaa video">
+				</div>
+				
 			</div>
 		</a>
 
-		</div><!--/row-->
+	</div><!--/row-->
+
 
 	</div><!--columns-->
 	</div><!--/row-->
