Added 3 x YouTube videos

--- a/src/pages/tietoturva.html
+++ b/src/pages/tietoturva.html
@@ -11,11 +11,11 @@ title: Tietoturva |
 
 		<p class="slogan">Sinun arkaluontoinen aineistosi ei kuulu muille, siksi me tuhoamme sen.</p>
 
-				<div class="row">
+		<div class="row">
 		<div class="columns small-12 medium-6 link-box">
 		<div class="link-box-content infografiikka">
 			<span>Katso infografiikka</span>
-			<span class="image-icon"></span>
+			<span class="image-icon hide-for-small-only"></span>
 			<img src="assets/img/info-thumb.jpg" class="info-thumb" alt="Avaa infografiikka">
 		</div>
 		</div>
@@ -24,7 +24,7 @@ title: Tietoturva |
 			<div class="columns small-12 medium-6 link-box">
 				<div class="link-box-content video">
 					<span>Katso video</span>
-					<span class="play-icon"></span>
+					<span class="play-icon hide-for-small-only"></span>
 					<img src="assets/img/truck.png" class="truck" alt="Avaa video">
 				</div>
 				
