--- a/src/pages/tietoturva.html
+++ b/src/pages/tietoturva.html
@@ -12,15 +12,18 @@ title: Tietoturva |
 		<p class="slogan">Sinun arkaluontoinen aineistosi ei kuulu muille, siksi me tuhoamme sen.</p>
 
 		<div class="row">
+
+<a href="/assets/img/Paperinkerays_infogr_tietoturva.pdf" target="_blank">
 		<div class="columns small-12 medium-6 link-box">
 		<div class="link-box-content infografiikka">
 			<span>Katso infografiikka</span>
 			<span class="image-icon hide-for-small-only"></span>
 			<img src="assets/img/info-thumb.jpg" class="info-thumb" alt="Avaa infografiikka">
 		</div>
+</a>
 		</div>
 
-		<a class="youtube cboxElement" href="http://www.youtube.com/embed/VOJyrQa_WR4?rel=0&amp;wmode=transparent">
+		<a class="youtube cboxElement" href="http://www.youtube.com/embed/0mWzPsY-xEc?rel=0&amp;wmode=transparent">
 			<div class="columns small-12 medium-6 link-box">
 				<div class="link-box-content video">
 					<span>Katso video</span>
