Separate avainluvut template for all ‘toimialat’

--- a/src/pages/jatehuolto.html
+++ b/src/pages/jatehuolto.html
@@ -102,7 +102,7 @@ title: Jätehuolto |
 	</div>
 
 	<div class="page-avainluvut">
-	{{> avainluvut}}
+	{{> avainluvut-jatehuolto}}
 	</div><!--/page-avainluvut-->
 
 </div><!--/row-->
