--- a/src/pages/kuormalava.html
+++ b/src/pages/kuormalava.html
@@ -98,7 +98,7 @@ title: Kuormalava |
 	</div>
 
 	<div class="page-avainluvut">
-	{{> avainluvut}}
+	{{> avainluvut-kuormalava}}
 	</div><!--/page-avainluvut-->
 
 </div><!--/row-->
