--- a/src/pages/tietoturva.html
+++ b/src/pages/tietoturva.html
@@ -102,7 +102,7 @@ title: Tietoturva |
 	</div>
 
 	<div class="page-avainluvut">
-	{{> avainluvut}}
+	{{> avainluvut-tietoturva}}
 	</div><!--/page-avainluvut-->
 
 </div><!--/row-->
