--- a/src/pages/tuottajavastuu.html
+++ b/src/pages/tuottajavastuu.html
@@ -78,7 +78,7 @@ title: Tuottajavastuu |
 	</div>
 
 	<div class="page-avainluvut">
-	{{> avainluvut}}
+	{{> avainluvut-tietoturva}}
 	</div><!--/page-avainluvut-->
 
 </div><!--/row-->
