New text content

--- a/src/pages/jatehuolto.html
+++ b/src/pages/jatehuolto.html
@@ -58,34 +58,32 @@ title: Jätehuolto |
 
 	<div class="columns small-12 medium-6 content-text">
 
+<p>Tuomme alalle kustannustehokkaita toimintamalleja ja olemme paikallisesti läsnä kaikkialla Suomessa.</p>
 
-<p>Tuomme alalle kustannustehokkaita ratkaisuja ja olemme paikallisesti läsnä.</p>
+<p>Encore Jätehuoltopalvelu on yritysten jätteiden kierrättämisen älykäs osaaja, jolle yritykset voivat ulkoistaa koko jätehuoltonsa.</p>
 
-<p>Encore Jätehuoltopalvelu on yritysten jätteiden kokonaisvaltaisen kierrättämisen älykäs osaaja, jolle yritykset voivat ulkoistaa koko jätehuoltonsa.</p>
+<p>Vastaamme digitalisaation ja paperijätteen vähenemisen myötä syntyneisiin kierrätyshaasteisiin. Encoren palvelu ei ole pelkkää kuitujenkierrättämistä, vaan tarjoamme räätälöityjä ratkaisuja kaikkiin asiakkaidemme jätehuoltotarpeisiin.</p>
 
-<p>Vastaamme digitalisaation ja paperijätteen vähenemisen myötä syntyneisiin kierrätyshaasteisiin. Encoren palvelu ei ole pelkkää kuitujenkierrättämistä, vaan tarjoamme ratkaisun asiakaslähtöisesti ja räätälöidysti kaikkiin jätehuoltotarpeisiin.</p>
+<p>Olemme läsnä paikallisesti, sillä meillä ei ole omaa kuljetuskalustoa, vaan toimintamallimme perustuu yhteistyöhön kuljetuskumppaneiden ja urakoitsijoiden kanssa. Tuemme paikallista työvoimaa järjestämällä logistiikan kumppaniyritysten kanssa jokaisessa 20 Encore-yksikössämme eri puolella maata.</p>
 
-<p>Olemme läsnä paikallisesti. Meillä ei ole omaa kuljetuskalustoa, vaan toimintamallimme perustuu yhteistyöhön kuljetuskumppaneiden ja urakoitsijoiden kanssa. Tuemme paikallista työvoimaa järjestämällä logistiikan kumppaniyritysten kanssa jokaisessa 20 tuotantoyksikössämme eri puolella maata.</p>
-
-<p>Kumppanuusmalli on olennainen osa toimintaamme. Kenttäpäälliköt operoivat konkreettisesti paikallisten urakoitsijoiden kanssa ja meillä on myös tarkoin valittuja valtakunnallisia kumppaneita. RS Ympäristöhuolto on oman vastuualueeni eli painotalojen alumiinilevyjen ja vaarallisten jätteiden käsittelyn ja kuljetuksen erityisosaaja, etelästä pohjoiseen.</p>
+<p>Kumppanuusmalli on olennainen osa toimintaamme. Kenttäpäälliköt operoivat konkreettisesti paikallisten urakoitsijoiden kanssa. Esimerkiksi kumppanimme RS Ympäristöhuollon vastuualueena on painotalojen alumiinilevyjen ja vaarallisten jätteiden käsittelyn ja kuljetus aina etelästä pohjoiseen.</p>
 
 <h2>Kasvollista palvelua asiakkaan yksilöllisiin tarpeisiin</h2>
 
-<p>Palvelemme omilla kasvoillamme. Asiakasvastaavat ovat asiakkaiden kanssa kanssa tiiviisti tekemisissä – yhden luukun periaate viestinnässä ja koordinoinnissa toteutuu asiakasvastaavan kautta.</p>
+<p>Palvelemme omilla kasvoillamme ja asiakasvastaavat ovat asiakkaiden kanssa tiiviisti tekemisissä – yhden luukun periaate viestinnässä ja koordinoinnissa toteutuu asiakasvastaavan kautta.</p>
 
-<p>Suunnittelemme aina asiakkaan kanssa jätehuollon tarpeet yksilöllisesti. Järjestämme operatiivisia seurantapalavereita sekä ohjausryhmiä vuosittain. Niissä pureudutaan jätehuollon toimivuuteen, mahdollisiin kehityskohtiin ja päätetään isommista linjanvedoista yhdessä asiakkaan kanssa. </p>
+<p>Suunnittelemme aina asiakkaan kanssa jätehuollon tarpeet yksilöllisesti. Järjestämme operatiivisia seurantapalavereita sekä ohjausryhmiä vuosittain, joissa pureudutaan jätehuollon toimivuuteen, mahdollisiin kehityskohtiin ja päätetään isommista linjanvedoista yhdessä asiakkaan kanssa.</p> 
 
-<p>Encore toimii ulkoisena auditoijana jätehuollon toimivuutta, turvallisuutta ja käytännönläheisyyyttä tarkasteltaessa. Käytössä on laatukierroskonsepti: teemme asiakkalle vuosittain laatukierrosarvion paikan päällä. Raportoimme mahdolliset poikkeamat asiakkaalle ja teemme tarvittavat toimenpiteet.</p>
+<p>Encore toimii myös ulkoisena auditoijana, kun halutaan tarkastella jätehuollon toimivuutta, turvallisuutta ja käytännönläheisyyttä. Käytössä on laatukierroskonsepti, jossa teemme asiakkaalle vuosittain laatukierrosarvion paikan päällä. Raportoimme mahdolliset poikkeamat  ja teemme tarvittavat toimenpiteet.</p>
 
 <h2>Älyä ja innovaatioita ympäristön hyväksi</h2>
 
-<p>Digitalisaatio on mahdollistanut jätehuollon älykkään, tietoon perustuvan johtamisen. Puristimemme on varustettu etähälyjärjestelmillä, toisin sanoen järjestelmä mittaa kontin täyttöastetta. Täyttörajan ylittyessä lähtee kuljetusliikkeelle tieto vaihtamistarpeesta. Tällä tavoin varmistamme sen, että puristinkonttien, lavojen ja pienastioiden täyttöasteet pysyvät mahdollisimman korkeina.</p> 
+<p>Digitalisaation myötä jätehuoltoa voidaan johtaa älykkäästi ja tietoon perustuen. Puristimemme on varustettu etähälytysjärjestelmillä, joka mittaa kontin täyttöastetta. Kun täyttöraja ylittyy, lähtee kuljetusliikkeelle  tieto vaihtamistarpeesta. Tällä tavoin varmistamme, että puristinkonttien, lavojen ja pienastioiden täyttöasteet pysyvät mahdollisimman korkeina.</p> 
 
-<p>Kuljetusurakoitsijoiden käytössä oleva mobiilisovellus antaa kuljettajille tiedot tyhjennystarpeista eri kohteissa. Sitä kautta he pystyvät suunnittelemaan omia ajoreittejään kustannustehokkaasti.</p> 
+<p>Kuljetusurakoitsijoiden käytössä oleva mobiilisovellus antaa kuljettajille tiedot tyhjennystarpeista eri kohteissa. Sovelluksen kautta kuljettajat pystyvät suunnittelemaan omia ajoreittejään kustannustehokkaasti.</p>
 
-<p>Edelläkävijyys edellyttää innovatiivisen jätehuollon toteuttamista ja kehittämistä edellleen, ympäristön hyväksi ja asiakkaan palvelemiseksi kustannustehokkaasti ja kokonaisvaltaisesti.</p>
+<p>Kehitämme jätehuoltoa jatkuvasti ympäristön ja asiakkaiden hyväksi. Encore haluaa ehdottomasti olla edelläkävijä myös tulevaisuudessa.</p>
 
-<p>Encore haluaa olla edelläkävijä myös jatkossa.</p>
 
 	</div><!--/content-text-->
 
