--- a/src/pages/paakirjoitus.html
+++ b/src/pages/paakirjoitus.html
@@ -8,11 +8,11 @@ title: Pääkirjoitus |
 
 <article class="page-content">
 
-<h1>Pääkirjoitus</h1>
+<h1>Yhteistyötä ja uusia palvelumalleja</h1>
 
 <p>Tiedolla johtamisesta on puhuttu jo vuosikymmeniä – ainakin johtamisen oppikirjoissa. Käytännön tasolla on kuitenkin monesti hämärää, mitä se oikea tieto on sisällöltään ja miten sitä johtamisessa pitäisi hyödyntää. Onneksi aika on hoitanut ratkaisuja lähemmäksi arkista tekemistä tietotekniikan kehittyessä. Olennaisen tiedon keräämisessä ei enää ole suurtakaan ongelmaa. Kaikki mahdollinen data on digitaalisessa muodossa ja sitä saa lähes reaaliajassa.</p>
 
-<p>Olemme Encore Palveluja kehittäessämme ottaneet käyttöön jo vuosikymmen sitten RFID-anturit tietoturva- ja jätepalveluissamme sekä viimeksi myös kuormalavoissamme. Kattavan, koko toimitusketjun matkalta kerättävän tiedon avulla pystymme raportoimaan asiakkaillemme toteutetut palvelutapahtumat. Luotettavuus on olennaista luottamuksellisten materiaalien käsittelyssä, olipa sitten kysymys papereista tai elektronisista tallenteista ja laitteista.</p>
+<p>Olemme Encore Palveluja kehittäessämme ottaneet käyttöön jo vuosikymmen sitten RFID-anturit tietoturva- ja jätepalveluissamme sekä viimeksi myös kuormalavoissamme. Kattavan, koko toimitusketjun matkalta kerättävän tiedon avulla pystymme raportoimaan asiakkaillemme toteutetut palvelutapahtumat. Luotettavuus on olennaista luottamuksellisten materiaalien käsittelyssä, olipa sitten kysymys papereista tai sähköisistä tallenteista ja laitteista.</p>
 
 <p>Tavaroiden ja palvelujen logistiikassa pienestäkin ylimääräisestä käsittelystä tai katkoksesta voi aiheutua merkittäviä vuotuisia kustannuksia. Kattava, oikeaan tietoon perustuva data auttaa nostamaan selkeästi tuottavuutta esimerkiksi kustannusten tai kiertonopeuksien tarkastelulla.</p>
 
@@ -21,6 +21,7 @@ title: Pääkirjoitus |
 <p>Jotta voimme vastata vähentyneen keräysmäärän aiheuttamiin kustannuspaineisiin, olemme aloittamassa uudenlaista keräysmallikokeilua. Tässä kohteenamme ovat haja-asutusalueet, jossa teemme yhteistyötä postin päivittäisjakelun kanssa. Tavoitteenamme on yhdistää postiautojen paluulogistiikkaan keräyspaperin talteenotto. Kaksi kärpästä yhdellä iskulla, ja sen lisäksi pienempi hiilijalanjälki.</p>
 
 <p>Hyvää ja lämmintä kesäkautta</p>
+
 
 <p>toimitusjohtaja<br>
 Kyösti Pöyry</p>
