--- a/src/pages/tietoturva.html
+++ b/src/pages/tietoturva.html
@@ -59,31 +59,30 @@ title: Tietoturva |
 
 <p>Tietoturvaosaaminen on tiedolla johtamista. Siinä ei ole varaa olettaa mitään.</p>
 
-<p>Encore Tietoturvapalvelu on yritysten luottamuksellisten aineistojen turvallinen tuhoaja. Arkaluontoisten asiakastietojen oikeanlainen säilyttäminen ja tuhoaminen on entistä tärkeämpää. Meidän on pystyttävä vastaamaan myös EU:n uuden tietosuoja-asetuksen tuomiin vaatimuksiin.</p>
+<p>Encore Tietoturvapalvelu on yritysten luottamuksellisten aineistojen turvallinen tuhoaja. Arkaluontoisten asiakastietojen oikeanlainen säilyttäminen ja tuhoaminen on monelle yritykselle kriittistä. Meidän on pystyttävä vastaamaan myös EU:n uuden tietosuoja-asetuksen tuomiin vaatimuksiin.</p>
 
-<p>Asiakkaalle olemme avoin, kasvollinen kumppani.  Kerromme asiakkaalle, kuinka prosessimme toimivat ja miten juuri heidän materiaalinsa käsitellään. Kuuntelemme asiakkaan toiveita ja räätälöimme palvelun heille sopivaksi.</p>
+<p>Asiakkaalle olemme avoin, kasvollinen kumppani. Kerromme hänelle, kuinka prosessimme toimivat ja miten juuri heidän materiaalinsa käsitellään. Kuuntelemme asiakkaan toiveita ja muokkaamme palvelun heille sopivaksi.
+Tehtävämme on myös pitää asiakas kärryillä prosessin kulusta. Haluamme saada kuuluviin asiakkaan äänen.</p>
 
-<p>On meidän tehtävämme pitää asiakas aina kärryillä prosessin kulusta. Haluamme myös saada kuuluviin asiakkaan äänen.</p>
+<p>Kiinnitämme erityistä huomiota siihen, että tietoturvakuljetukset toimivat varmasti ja aukottomasti. Encorella on tietoturva-asioissa nollatoleranssi. Säiliöiden RFID-tägien avulla säiliöiden noutoaikaa ja tuhottavaksi saapumista seurataan tarkasti ja vasteaika tuhoamiselle pystytään todentamaan.</p>
 
-<p>Kiinnitämme erityistä huomiota siihen että tietoturvakuljetukset toimivat varmasti ja aukottomasti. Encorella on tietoturva-asioissa nollatoleranssi. Säiliöiden RFID-tägien avulla säiliöiden noutoaikaa ja tuhottavaksi saapumista seurataan tarkasti ja vasteaika tuhoamiselle pystytään todentamaan.</p>
-
-<p>Seurattavuus koskee myös autoja: GPS-paikantamisella varmistetaan, että ajojärjestelijällä on reaaliaikainen ja tarkka tieto siitä missä autot liikkuvat. Tietoturvasäiliöt pysyvät lukittuina koko kuljetuksen ajan umpikorisissa autoissa. Kumppanikuljettajat perehdytetään koko Encoren prosessiin sekä koulutetaan turvakuljettamiseen.</p>
+<p>Seurattavuus koskee myös autoja: GPS-paikantamisella varmistetaan, että ajojärjestelijällä on reaaliaikainen ja tarkka tieto siitä, missä autot liikkuvat, ja että tietoturvasäiliöt pysyvät lukittuina koko kuljetuksen ajan umpikorisissa autoissa. Kumppanikuljettajat perehdytetään koko Encoren prosessiin sekä koulutetaan turvakuljettamiseen.</p> 
 
 <h2>Kumppanit tuovat kustannustehokkuutta</h2>
 
-<p>Kumppanuusyrityksillä on merkittävä osa Encoren palvelumallissa. Tarkoin valittujen kuljetuskumppaneiden avulla pystymme palvelemaan asiakasta lähellä ja nopeasti. Meillä on valtakunnallinen palvelu, jonka olemme suunnitelleet ja toteuttaneet alueellisesti toimivaksi. Esimerkiksi tietoturvakuljetukset pääkaupunkiseudulla on meille toimittanut vuodesta 2014 alkaen Hakonen Solutions Oy.</p>
+<p>Kumppanuusyrityksillä on merkittävä osa Encoren palvelumallissa. Tarkoin valittujen kuljetuskumppaneiden avulla pystymme palvelemaan asiakasta lähellä ja nopeasti. Meillä on valtakunnallinen palvelu, jonka olemme suunnitelleet ja toteuttaneet alueellisiin tarpeisiin. Esimerkiksi tietoturvakuljetukset pääkaupunkiseudulla on meille toimittanut vuodesta 2014 alkaen Hakonen Solutions Oy.</p>
 
 <p>Encore on logistiikan osaaja, joka optimoi ja johtaa tiedolla. Seuraamme säiliöiden täyttymistä ja vältämme turhia ajokilometrejä. Ei ole asiakkaan, ympäristön eikä meidän etumme mukaista ajeluttaa puolityhjiä autoja.</p>
 
-<p>Tuhoamisyksikkömme ovat valvottuja ja suljettuja tiloja, joihin ei ulkopuolisella ole asiaa. Vastuullisena tuhoajana varmistamme että kaikki materiaali tuhotaan asianmukaisesti.</p>
+<p>Tuhoamisyksikkömme ovat valvottuja ja suljettuja tiloja, joihin ei ulkopuolisilla ole asiaa. Vastuullisena tuhoajana varmistamme että kaikki materiaali tuhotaan asianmukaisesti.</p>
 
 <h2>Encore on tietoturvan ja kierrättämisen uudistaja</h2>
 
-<p>Tietoturvapalveluiden tarve muuttuu ja kehittyy. Haluamme olla innovatiivinen palveluntarjoaja myös tulevaisuudessa. Pelkällä paperinsilppuamisella ei enää pärjää. Esimerkiksi sähkö- ja elektroniikkaromun kuten kovalevyjen ja USB-tikkujen asianmukainen ja luotettava hävittäminen murskaamalla on tärkeä osa toimintaamme. Encore Tietoturvapalveluun sisältyy lupaus kokonaisvaltaisesta tietoturva-aineistojen turvallisesta tuhoamisesta.</p>
+<p>Tietoturvapalveluiden tarve muuttuu ja kehittyy. Haluamme olla kekseliäs  ympäristökumppani myös tulevaisuudessa. Pelkällä paperinsilppuamisella ei enää pärjää. Esimerkiksi sähkö- ja elektroniikkaromun kuten kovalevyjen ja USB-tikkujen asianmukainen ja luotettava hävittäminen murskaamalla on tärkeä osa toimintaamme. Encore Tietoturvapalveluun sisältyy lupaus kokonaisvaltaisesta tietoturva-aineistojen turvallisesta tuhoamisesta.</p>
 
-<p>Olemme kiinnostuneet kehittämään kierrätysratkaisuja, joita alalla ei ole vielä nähty – haluamme olla kierrätyksen aallonharjalla. Jos tuhoamiskeinoa ei vielä ole olemassa, keksimme sen. Kierrätys on aina toimintamme ytimessä. Tietoturvajätteestä syntyvä paperisilppu päätyy pehmopaperituotannon raaka-aineeksi.</p>
+<p>Olemme kiinnostuneita kehittämään kierrätysratkaisuja, joita alalla ei vielä ole nähty – haluamme olla kierrätyksen aallonharjalla. Jos tuhoamiskeinoa ei vielä ole olemassa, keksimme sen. Kierrätys on aina toimintamme ytimessä. Tietoturvajätteestä syntyvä paperisilppu päätyy pehmopaperituotannon raaka-aineeksi.</p>
 
-<p>Uusien ratkaisujen löytäminen on myös henkilökohtainen tavoitteeni. Joskus ratkaisut tulevat läheltä. Kollegani kehitti prosessin rekisterikilville. Nyt niitä otetaan vastaan, tuhotaan ja kierrätetään materiaalina yhteistyössä kumppanin kanssa.</p>
+<p>Uusien ratkaisujen löytäminen on myös henkilökohtainen tavoitteeni. Joskus ratkaisut tulevat läheltä. Kollegani kehitti prosessin rekisterikilpien turvalliseen kierrättämiseen. Nyt niitä otetaan vastaan, tuhotaan ja kierrätetään materiaalina yhteistyössä kumppanimme kanssa.</p>
 
 <p>Osaamisella ja uudistumiskyvyllä ansaitsemme asiakkaiden luottamuksen.</p>
 
