Same page layout for ‘Paakirjoitus’

--- a/src/pages/paakirjoitus.html
+++ b/src/pages/paakirjoitus.html
@@ -2,13 +2,27 @@
 title: Pääkirjoitus |
 ---
 
-<div class="paakirjoitus">
-<div class="row">
-<div class="columns small-12">
+<!-- HERO -->
+
+<div class="page-hero hero-paakirjoitus">
+
+
+</div><!--/page-hero-->
 
 <article class="page-content">
+<div class="row">
 
-<h1>Yhteistyötä ja uusia palvelumalleja</h1>
+<div class="columns small-12">
+	<h1>Yhteistyötä ja uusia palvelumalleja</h1>
+</div>
+
+	<div class="row">
+
+	<div class="columns small-12 medium-6 content-image">
+		<img src="assets/img/page-image.jpg">
+	</div><!--/content-image-->
+
+	<div class="columns small-12 medium-6 content-text">
 
 <p>Tiedolla johtamisesta on puhuttu jo vuosikymmeniä – ainakin johtamisen oppikirjoissa. Käytännön tasolla on kuitenkin monesti hämärää, mitä se oikea tieto on sisällöltään ja miten sitä johtamisessa pitäisi hyödyntää. Onneksi aika on hoitanut ratkaisuja lähemmäksi arkista tekemistä tietotekniikan kehittyessä. Olennaisen tiedon keräämisessä ei enää ole suurtakaan ongelmaa. Kaikki mahdollinen data on digitaalisessa muodossa ja sitä saa lähes reaaliajassa.</p>
 
@@ -22,13 +36,14 @@ title: Pääkirjoitus |
 
 <p>Hyvää ja lämmintä kesäkautta</p>
 
-
 <p>toimitusjohtaja<br>
 Kyösti Pöyry</p>
 
 
-</article>
+	</div><!--/content-text-->
 
-</div><!--/paakirjoitus-->
-</div><!-- /columns -->
-</div><!-- /row -->
+	</div><!--/row-->
+
+</div><!--/row-->
+
+</article><!--/page-content-->
