Added images for the site

--- a/src/pages/kuormalava.html
+++ b/src/pages/kuormalava.html
@@ -4,7 +4,7 @@ title: Kuormalava |
 
 <!-- HERO -->
 
-<div class="page-hero hero-jatehuolto">
+<div class="page-hero hero-kuormalava">
 
 	<div class="row">
 	<div class="columns small-12">
@@ -51,7 +51,7 @@ title: Kuormalava |
 	<div class="row">
 
 	<div class="columns small-12 medium-6 content-image">
-		<img src="assets/img/page-image.jpg">
+		<img src="assets/img/timo_kaikkonen_kuormalavat.jpg">
 	</div><!--/content-image-->
 
 	<div class="columns small-12 medium-6 content-text">
