--- a/src/pages/tuottajavastuu.html
+++ b/src/pages/tuottajavastuu.html
@@ -4,7 +4,7 @@ title: Tuottajavastuu |
 
 <!-- HERO -->
 
-<div class="page-hero hero-jatehuolto">
+<div class="page-hero hero-tuottajavastuu">
 
 	<div class="row">
 	<div class="columns small-12">
