--- a/src/pages/tietoturva.html
+++ b/src/pages/tietoturva.html
@@ -4,7 +4,7 @@ title: Tietoturva |
 
 <!-- HERO -->
 
-<div class="page-hero hero-jatehuolto">
+<div class="page-hero hero-tietoturva">
 
 	<div class="row">
 	<div class="columns small-12">
@@ -52,7 +52,7 @@ title: Tietoturva |
 	<div class="row">
 
 	<div class="columns small-12 medium-6 content-image">
-		<img src="assets/img/page-image.jpg">
+		<img src="assets/img/jenni_kivi_tietoturva.jpg">
 	</div><!--/content-image-->
 
 	<div class="columns small-12 medium-6 content-text">
