Avainluvut + hero link box changes

--- a/src/pages/jatehuolto.html
+++ b/src/pages/jatehuolto.html
@@ -97,7 +97,7 @@ title: Jätehuolto |
 	</div>
 
 	<div class="page-avainluvut">
-	{{> avainluvut-jatehuolto}}
+	{{> avainluvut}}
 	</div><!--/page-avainluvut-->
 
 </div><!--/row-->
