--- a/src/pages/kuormalava.html
+++ b/src/pages/kuormalava.html
@@ -92,7 +92,7 @@ title: Kuormalava |
 	</div>
 
 	<div class="page-avainluvut">
-	{{> avainluvut-kuormalava}}
+	{{> avainluvut}}
 	</div><!--/page-avainluvut-->
 
 </div><!--/row-->
