--- a/src/pages/tietoturva.html
+++ b/src/pages/tietoturva.html
@@ -98,7 +98,7 @@ Tehtävämme on myös pitää asiakas kärryillä prosessin kulusta. Haluamme sa
 	</div>
 
 	<div class="page-avainluvut">
-	{{> avainluvut-tietoturva}}
+	{{> avainluvut}}
 	</div><!--/page-avainluvut-->
 
 </div><!--/row-->
