--- a/src/pages/tuottajavastuu.html
+++ b/src/pages/tuottajavastuu.html
@@ -65,7 +65,7 @@ title: Tuottajavastuu |
 	</div>
 
 	<div class="page-avainluvut">
-	{{> avainluvut-tietoturva}}
+	{{> avainluvut}}
 	</div><!--/page-avainluvut-->
 
 </div><!--/row-->
