Call to action buttons for pages

--- a/src/pages/tietoturva.html
+++ b/src/pages/tietoturva.html
@@ -84,6 +84,9 @@ Tehtävämme on myös pitää asiakas kärryillä prosessin kulusta. Haluamme sa
 
 <p>Osaamisella ja uudistumiskyvyllä ansaitsemme asiakkaiden luottamuksen.</p>
 
+
+<div class="newsletter-link"><a href="http://www.paperinkerays.fi/yrityksille/encore-tietoturvapalvelu/" target="_blank">Tutustu palveluumme &raquo;</a></div><!--/newsletter-button-->
+
 	</div><!--/content-text-->
 
 	</div><!--/row-->
