--- a/src/pages/jatehuolto.html
+++ b/src/pages/jatehuolto.html
@@ -83,6 +83,10 @@ title: Jätehuolto |
 <p>Kehitämme jätehuoltoa jatkuvasti ympäristön ja asiakkaiden hyväksi. Encore haluaa ehdottomasti olla edelläkävijä myös tulevaisuudessa.</p>
 
 
+<div class="newsletter-link"><a href="http://www.paperinkerays.fi/yrityksille/encore-jatehuoltopalvelu/" target="_blank">Tutustu palveluumme &raquo;</a></div><!--/newsletter-button-->
+
+
+
 	</div><!--/content-text-->
 
 	</div><!--/row-->
