--- a/src/pages/kuormalava.html
+++ b/src/pages/kuormalava.html
@@ -78,6 +78,9 @@ title: Kuormalava |
 
 <p>Seurattavuus, ekologisuus ja joustavuus ovat lavatoiminnan tulevaisuutta. Tehtävämme on varmistaa, että asiakkaalla on lava, josta se saa omaa toimintaansa tukevaa tietoa edullisesti ja vaivattomasti. Vuokralavamallissa lavat säilyvät paremmassa kunnossa ja jätteen määrä vähenee. Tälle pohjalle rakennamme tulevaisuuden toimitusketjua.</p>
 
+
+<div class="newsletter-link"><a href="http://www.paperinkerays.fi/yrityksille/encore-kuormalavapalvelu/" target="_blank">Tutustu palveluumme &raquo;</a></div><!--/newsletter-button-->
+
 	</div><!--/content-text-->
 
 	</div><!--/row-->
