Image + text changes

--- a/src/pages/tuottajavastuu.html
+++ b/src/pages/tuottajavastuu.html
@@ -9,7 +9,7 @@ title: Tuottajavastuu |
 	<div class="row">
 	<div class="columns small-12">
 
-		<p class="slogan">Isännöitsijän paras ystävä löytyy Paperinkeräykseltä.</p>
+		<p class="slogan">Kierrättäjän paras ystävä löytyy Paperinkeräykseltä.</p>
 
 		<div class="row">
 		<div class="columns small-12 medium-6 link-box">
