--- a/src/pages/paakirjoitus.html
+++ b/src/pages/paakirjoitus.html
@@ -19,7 +19,7 @@ title: Pääkirjoitus |
 	<div class="row">
 
 	<div class="columns small-12 medium-6 content-image">
-		<img src="assets/img/page-image.jpg">
+		<img src="assets/img/kyosti_poyry.jpg">
 	</div><!--/content-image-->
 
 	<div class="columns small-12 medium-6 content-text">
