Added mask to page hero

--- a/src/pages/jatehuolto.html
+++ b/src/pages/jatehuolto.html
@@ -5,7 +5,6 @@ title: Jätehuolto |
 <!-- HERO -->
 
 <div class="page-hero hero-jatehuolto">
-
 	<div class="row">
 	<div class="columns small-12">
 
@@ -38,7 +37,7 @@ title: Jätehuolto |
 
 	</div><!--columns-->
 	</div><!--/row-->
-
+<span class="mask"></span>
 </div><!--/page-hero-->
 
 <article class="page-content">
