--- a/src/pages/kuormalava.html
+++ b/src/pages/kuormalava.html
@@ -36,7 +36,7 @@ title: Kuormalava |
 
 	</div><!--columns-->
 	</div><!--/row-->
-
+<span class="mask"></span>
 </div><!--/page-hero-->
 
 <article class="page-content">
