--- a/src/pages/paakirjoitus.html
+++ b/src/pages/paakirjoitus.html
@@ -5,7 +5,7 @@ title: Pääkirjoitus |
 <!-- HERO -->
 
 <div class="page-hero hero-paakirjoitus">
-
+<span class="mask"></span>
 
 </div><!--/page-hero-->
 
@@ -36,8 +36,8 @@ title: Pääkirjoitus |
 
 <p>Hyvää ja lämmintä kesäkautta</p>
 
-<p>toimitusjohtaja<br>
-Kyösti Pöyry</p>
+<p>Kyösti Pöyry<br>
+toimitusjohtaja</p>
 
 
 	</div><!--/content-text-->
