--- a/src/pages/tuottajavastuu.html
+++ b/src/pages/tuottajavastuu.html
@@ -23,7 +23,7 @@ title: Tuottajavastuu |
 
 	</div><!--columns-->
 	</div><!--/row-->
-
+<span class="mask"></span>
 </div><!--/page-hero-->
 
 <article class="page-content">
