--- a/src/pages/tietoturva.html
+++ b/src/pages/tietoturva.html
@@ -37,7 +37,7 @@ title: Tietoturva |
 
 	</div><!--columns-->
 	</div><!--/row-->
-
+<span class="mask"></span>
 </div><!--/page-hero-->
 
 <article class="page-content">
