Slogan for ‘Paakirjoitus’ hero

--- a/src/pages/paakirjoitus.html
+++ b/src/pages/paakirjoitus.html
@@ -5,6 +5,14 @@ title: Pääkirjoitus |
 <!-- HERO -->
 
 <div class="page-hero hero-paakirjoitus">
+<div class="row">
+	<div class="columns small-12">
+
+		<p class="slogan">Yhdessä pienempi hiilijalanjälki</p>
+
+
+	</div><!--columns-->
+	</div><!--/row-->
 <span class="mask"></span>
 
 </div><!--/page-hero-->
