--- a/src/pages/jatehuolto.html
+++ b/src/pages/jatehuolto.html
@@ -22,7 +22,7 @@ title: Jätehuolto |
 </a>
 		</div>
 
-		<a class="youtube cboxElement" href="http://www.youtube.com/embed/_HYA_iWvTGs?rel=0&amp;wmode=transparent">
+		<a class="youtube cboxElement" href="http://www.youtube.com/embed/_HYA_iWvTGs?rel=0&autoplay=1&amp;wmode=transparent">
 			<div class="columns small-12 medium-6 link-box">
 				<div class="link-box-content video">
 					<span>Katso video</span>
