--- a/src/pages/tuottajavastuu.html
+++ b/src/pages/tuottajavastuu.html
@@ -13,10 +13,13 @@ title: Tuottajavastuu |
 
 		<div class="row">
 		<div class="columns small-12 medium-6 link-box">
+<a href="/assets/pdf/Paperinkerays_infogr_tuottajavastuu.pdf" target="_blank">
+
 		<div class="link-box-content infografiikka">
 			<span>Katso infografiikka</span>
 			<span class="image-icon hide-for-small-only"></span>
 		</div>
+</a>
 		</div>
 
 	</div><!--/row-->
