--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -36,7 +36,7 @@
 	
 		<div class="columns small-12 medium-4 kokonaisuus">
 
-		<a class="youtube cboxElement" href="http://www.youtube.com/embed/VOJyrQa_WR4?rel=0&amp;wmode=transparent">
+		<a class="youtube cboxElement" href="http://www.youtube.com/embed/_HYA_iWvTGs?rel=0&autoplay=1&amp;wmode=transparent">
 			<img src="assets/img/jatehuolto-icon.png" alt="Katso jätehuolto-video">
 		</a>
 	
@@ -46,7 +46,7 @@
 	
 		<div class="columns small-12 medium-4 kokonaisuus">
 
-		<a class="youtube cboxElement" href="http://www.youtube.com/embed/VOJyrQa_WR4?rel=0&amp;wmode=transparent">
+		<a class="youtube cboxElement" href="http://www.youtube.com/embed/0mWzPsY-xEc?rel=0&autoplay=1&amp;wmode=transparent">
 			<img src="assets/img/tietoturva-icon.png" alt="Katso tietoturva-video">
 		</a>
 
@@ -57,7 +57,7 @@
 	
 		<div class="columns small-12 medium-4 kokonaisuus">
 
-		<a class="youtube cboxElement" href="http://www.youtube.com/embed/VOJyrQa_WR4?rel=0&amp;wmode=transparent">
+		<a class="youtube cboxElement" href="http://www.youtube.com/embed/BqqQaEMY97A?rel=0&autoplay=1&amp;wmode=transparent">
 			<img src="assets/img/kuormalava-icon.png" alt="Katso kuormalava-video">
 		</a>
 		
