Show image & play icons on small screens

--- a/src/pages/jatehuolto.html
+++ b/src/pages/jatehuolto.html
@@ -17,7 +17,7 @@ title: Jätehuolto |
 
 		<div class="link-box-content infografiikka">
 			<span>Katso infografiikka</span>
-			<span class="image-icon hide-for-small-only"></span>
+			<span class="image-icon"></span>
 		</div>
 </a>
 		</div>
@@ -26,7 +26,7 @@ title: Jätehuolto |
 			<div class="columns small-12 medium-6 link-box">
 				<div class="link-box-content video">
 					<span>Katso video</span>
-					<span class="play-icon hide-for-small-only"></span>
+					<span class="play-icon"></span>
 				</div>
 				
 			</div>
