--- a/src/pages/tuottajavastuu.html
+++ b/src/pages/tuottajavastuu.html
@@ -17,7 +17,7 @@ title: Tuottajavastuu |
 
 		<div class="link-box-content infografiikka">
 			<span>Katso infografiikka</span>
-			<span class="image-icon hide-for-small-only"></span>
+			<span class="image-icon"></span>
 		</div>
 </a>
 		</div>
